Added a field to the script upgrade notification to limit warnings to only some virtual servers, or to exclude servers.
Moved the option for a secondary group for domain owners to the template level.
---- Changes since 3.69 ----
Updated the Piwik script installer to 0.4, Redmine to 0.8.4, SMF to 1.1.9, OpenGoo to 1.4.2, Squirrelmail to 1.4.19, Coppermine to 1.4.24, Magento to 1.3.2.1, phpMyFAQ to 2.0.15, DokuWiki to 2009-02-14b, OpenX to 2.8.1, phpBB to 3.0.5, TikiWiki to 3.0, Joomla to 1.5.11, Zenphoto to 1.2.5, bbPress to 0.9.0.5, phpCOIN to 1.6.2, Mantis to 1.1.8, WordPress to 2.8, MediaWiki to 1.15.0, Movable Type to 4.261, SugarCRM to 5.2.0f, MoinMoin to 1.8.4, Instiki to 0.17, Radiant to 0.8.0, and phpMyAdmin to 3.2.0.
Added a script installer for eGroupWare 1.6.001.
Bandwidth usage by date or month can now be graphed for sub-servers.
Partially completed backups (where only some domains failed) are now shown in the backup logs.
The email to mailboxes who are approaching or over quota can now be customized on the Disk Quota Monitoring page.
Added the Convert Alias Server page to change an existing alias virtual server into a sub-server.
Historic statistics graphs can now be plotted on a log scale, and both axis are used if multiple values are plotted.
Extra administrators can now be limited to a subset of the parent servers domains, either from the Edit Extra Administator page or using the command-line API.
Moved the settings for which Webmin modules are available to virtual server owners from the Module Config page to a new section in server templates, so that it can be adjusted on a per-template basis.
Email to domain owners on virtual server creation can now include variables like $PLAN_NAME, $RESELLER_NAME and $PARENT_DOM.
When a virtual server is disabled for exceeding its bandwidth limits, all sub-servers will be too. Similarly, they will be re-enabled if the server falls below its limit.
Added support for migrating cPanel addon domains properly.