@@ -1,0 +1,11 @@
+<header>Automatically add named.conf directives</header>
+
+By default, Virtualmin will automatically add <tt>also-notify</tt> and
+<tt>allow-transfer</tt> blocks to a new domain's entry in the BIND
+<tt>named.conf</tt> file to notify and allow transfers from known DNS
+slaves. However, if you have these defined globally or at the view level
+in your BIND configuration, you can un-check one or both of these checkboxes
+to prevent Virtualmin from automatically adding those blocks. <p>
+
+<footer>
+
